[project]
name = "openhands-playwright-page-object-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html5lib>=1.1",
    "lxml>=5.3.0",
    "playwright>=1.49.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
